--- a/project.config
+++ b/project.config
@@ -2,3 +2,14 @@
 	inheritFrom = releng
 [project]
 	description = Release Engineering - Autorelease
+[access "refs/*"]
+	owner = group ldap/gerrit-autorelease-committers
+	forgeAuthor = group ldap/gerrit-autorelease-committers
+[access "refs/heads/*"]
+	label-Code-Review = -2..+2 group ldap/gerrit-autorelease-committers
+	label-Verified = -1..+1 group ldap/gerrit-autorelease-committers
+	submit = group ldap/gerrit-autorelease-committers
+[access "refs/tags/*"]
+	create = group ldap/gerrit-autorelease-committers
+	push = group ldap/gerrit-autorelease-committers
+	pushTag = group ldap/gerrit-autorelease-committers
