Start mirroring to GitHub

--- a/project.config
+++ b/project.config
@@ -5,6 +5,7 @@
 [access "refs/*"]
 	owner = group ldap/gerrit-autorelease-committers
 	forgeAuthor = group ldap/gerrit-autorelease-committers
+	read = group GitHub Replication
 [access "refs/heads/*"]
 	label-Code-Review = -2..+2 group ldap/gerrit-autorelease-committers
 	label-Verified = -1..+1 group ldap/gerrit-autorelease-committers
