Change lispflowmapping to build master branch
Change-Id: I10956b1e9dfcc4eecc0205f3799da5beaca60993
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -29,7 +29,7 @@
 [submodule "lispflowmapping"]
 	path = lispflowmapping
 	url = ../../lispflowmapping
-	branch = develop
+	branch = master
 [submodule "odlparent"]
 	path = odlparent
 	url = ../../odlparent
