--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,9 @@
   
   <modules>
     <module>aaa</module>
+    <!-- Needs patch https://git.opendaylight.org/gerrit/17883
     <module>alto</module>
+    -->
     <module>bgpcep</module>
     <!-- Needs patch https://git.opendaylight.org/gerrit/17459
     <module>capwap</module>
