Remove vpnservice for autorelease
Change-Id: I11355c0002536b81659e7bf54dc3620096e393d7
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,9 @@
     <module>tsdr</module>
     <module>ttp</module>
     <module>usc</module>
+    <!-- Needs patch https://git.opendaylight.org/gerrit/17955
     <module>vpnservice</module>
+    -->
     <module>vtn</module>
     <module>yangtools</module>
   </modules>
