--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
   <groupId>org.opendaylight.releng.autorelease</groupId>
   <artifactId>autorelease-root</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0-Daily</version>
   <packaging>pom</packaging>
   <name>autorelease</name> <!-- Used by Sonar to set project name -->
   
@@ -25,7 +25,9 @@
     <module>alto</module>
     <module>bgpcep</module>
     <module>capwap</module>
+    <!-- Needs patch https://git.opendaylight.org/gerrit/17960
     <module>coretutorials</module>
+    -->
     <module>controller</module>
     <!-- Needs patch https://git.opendaylight.org/gerrit/17948
     <module>didm</module>
