Remove coretutorials from build waiting on outstanding patches
Change-Id: Ia847a0c2ee7b95ac160e28ff3929496b4ec83b06
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,9 @@
     <module>alto</module>
     <module>bgpcep</module>
     <module>capwap</module>
+    <!-- Needs patch https://git.opendaylight.org/gerrit/17960
     <module>coretutorials</module>
+    -->
     <module>controller</module>
     <!-- Needs patch https://git.opendaylight.org/gerrit/17948
     <module>didm</module>
