Remove vpnservice from build due to missing features-flow
Change-Id: I20835671f9abfbd023cf0d2a4b8296395d019e89
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,9 @@
     <!-- Needs patch for dlux
     <module>usc</module>
     -->
+    <!-- Missing features-flow feature, moved to openflowplugin
     <module>vpnservice</module>
+    -->
     <module>vtn</module>
     <module>yangtools</module>
   </modules>
