Branch out for Lithium
Change-Id: I66b7567c7949e0ae864f07fcc08f688ba05fe5d3
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -33,7 +33,7 @@
 [submodule "odlparent"]
 	path = odlparent
 	url = ../../odlparent
-	branch = master
+	branch = stable/lithium
 [submodule "openflowjava"]
 	path = openflowjava
 	url = ../../openflowjava
