Revert "Branch out for Lithium"
This reverts commit 999954eee33dce0b5c5f004f9b8240b71ffb12c5.

Change-Id: I0b801623410090fa44e4231a80ed96663dde8ff6
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -33,7 +33,7 @@
 [submodule "odlparent"]
 	path = odlparent
 	url = ../../odlparent
-	branch = stable/lithium
+	branch = master
 [submodule "openflowjava"]
 	path = openflowjava
 	url = ../../openflowjava
