Add yangtools lithium branch and re-enable yangtools build
Change-Id: If3262d2e9b3ef7079ad937da46284f18a907f2d1
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -77,7 +77,7 @@
 [submodule "yangtools"]
 	path = yangtools
 	url = ../../yangtools
-	branch = master
+	branch = stable/lithium
 [submodule "alto"]
 	path = alto
 	url = ../../alto
