Track controller stable/lithium branch
Change-Id: I0f85d6cbf597b33ac0e4631fe6e5522a001002f3
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 [submodule "controller"]
 	path = controller
 	url = ../../controller
-	branch = master
+	branch = stable/lithium
 [submodule "dlux"]
 	path = dlux
 	url = ../../dlux
