Track stable/lithium for tcpmd5
Change-Id: I3f8db90a14492109c22bf80c46455ceb40d1c5bc
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -65,7 +65,7 @@
 [submodule "tcpmd5"]
 	path = tcpmd5
 	url = ../../tcpmd5
-	branch = master
+	branch = stable/lithium
 [submodule "ttp"]
 	path = ttp
 	url = ../../ttp
