Track bgpcep stable/lithium branch
Change-Id: I79f5da6d93b224222ced8f84054e84aa580cdb03
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,7 +5,7 @@
 [submodule "bgpcep"]
 	path = bgpcep
 	url = ../../bgpcep
-	branch = master
+	branch = stable/lithium
 [submodule "controller"]
 	path = controller
 	url = ../../controller
