--- a/.gitmodules
+++ b/.gitmodules
@@ -13,7 +13,7 @@
 [submodule "dlux"]
 	path = dlux
 	url = ../../dlux
-	branch = master
+	branch = stable/lithium
 [submodule "groupbasedpolicy"]
 	path = groupbasedpolicy
 	url = ../../groupbasedpolicy
