Track stable/lithium branch for lispflowmapping
Change-Id: I8cdcaca8679f5a0eda55c4bc190878fe67e908c6
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -29,7 +29,7 @@
 [submodule "lispflowmapping"]
 	path = lispflowmapping
 	url = ../../lispflowmapping
-	branch = master
+	branch = stable/lithium
 [submodule "odlparent"]
 	path = odlparent
 	url = ../../odlparent
