Track stable/lithium for sdninterfaceapp
Change-Id: I4bcb4417443193f220438119aae669c5378f158c
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,7 +49,7 @@
 [submodule "sdninterfaceapp"]
 	path = sdninterfaceapp
 	url = ../../sdninterfaceapp
-	branch = master
+	branch = stable/lithium
 [submodule "sfc"]
 	path = sfc
 	url = ../../sfc
