Track stable/lithium branch for openflowjava
Change-Id: I26ee0fbd91975e214541c0819c970a3c6e3204cc
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,7 +37,7 @@
 [submodule "openflowjava"]
 	path = openflowjava
 	url = ../../openflowjava
-	branch = master
+	branch = stable/lithium
 [submodule "openflowplugin"]
 	path = openflowplugin
 	url = ../../openflowplugin
