Track stable/lithium branch for snmp
Change-Id: I20e1953673fef478838a45833bcd4d36d3bbfb9d
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -133,7 +133,7 @@
 [submodule "snmp"]
 	path = snmp
 	url = ../../snmp
-	branch = master
+	branch = stable/lithium
 [submodule "sxp"]
 	path = sxp
 	url = ../../sxp
