--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "aaa"]
 	path = aaa
 	url = ../../aaa
-	branch = master
+	branch = stable/lithium
 [submodule "bgpcep"]
 	path = bgpcep
 	url = ../../bgpcep
