Build bgpcep and tcpmd5
Change-Id: If6f4e09e43f123aa153241ca2711b582b51ee872
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,9 @@
     <module>aaa</module>
     <!-- Waiting for M5 lithium
     <module>alto</module>
+    -->
     <module>bgpcep</module>
+    <!-- Waiting for M5 lithium
     <module>capwap</module>
     <module>coretutorials</module>
     -->
@@ -73,7 +75,9 @@
     <module>snmp</module>
     <module>snmp4sdn</module>
     <module>sxp</module>
+    -->
     <module>tcpmd5</module>
+    <!-- Waiting for M5 lithium
     <module>topoprocessing</module>
     <module>tsdr</module>
     <module>ttp</module>
