Track stable/lithium for topoprocessing
Change-Id: Ia418e5d2fe2f6b152abc8e75ac4f16f5220fe31c
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -145,7 +145,7 @@
 [submodule "topoprocessing"]
 	path = topoprocessing
 	url = ../../topoprocessing
-	branch = master
+	branch = stable/lithium
 [submodule "usc"]
 	path = usc
 	url = ../../usc
