Track and build stable/lithium for neutron
Change-Id: I3f5da3c2868870e897d5b757593edb218ec35e15
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -117,7 +117,7 @@
 [submodule "neutron"]
 	path = neutron
 	url = ../../neutron
-	branch = master
+	branch = stable/lithium
 [submodule "packetcable"]
 	path = packetcable
 	url = ../../packetcable
