Track and build stable/lithium for openflowplugin
Change-Id: I5e8732b2fceb35ea9e3759aa48542b4991c46ca3
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -41,7 +41,7 @@
 [submodule "openflowplugin"]
 	path = openflowplugin
 	url = ../../openflowplugin
-	branch = master
+	branch = stable/lithium
 [submodule "ovsdb"]
 	path = ovsdb
 	url = ../../ovsdb
