Track and build l2switch stable/lithium branch
Change-Id: I423021a76ea3c138a5f6b312100cd7d2a8930c67
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,7 +25,7 @@
 [submodule "l2switch"]
 	path = l2switch
 	url = ../../l2switch
-	branch = master
+	branch = stable/lithium
 [submodule "lispflowmapping"]
 	path = lispflowmapping
 	url = ../../lispflowmapping
