Track and build stable/lithium for ttp
Change-Id: I19b15297795bfd3d3d030e0b352f9667137fae2b
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -69,7 +69,7 @@
 [submodule "ttp"]
 	path = ttp
 	url = ../../ttp
-	branch = master
+	branch = stable/lithium
 [submodule "vtn"]
 	path = vtn
 	url = ../../vtn
