Track stable/lithium for vtn
Change-Id: I921b5380be6033af9dd9c186d4d73c4229fcf988
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -73,7 +73,7 @@
 [submodule "vtn"]
 	path = vtn
 	url = ../../vtn
-	branch = master
+	branch = stable/lithium
 [submodule "yangtools"]
 	path = yangtools
 	url = ../../yangtools
