Track stable/lithium for lacp
Change-Id: I8cfc702b193a95fd4c3be1b39d7d66a80d10d787
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -105,7 +105,7 @@
 [submodule "lacp"]
 	path = lacp
 	url = ../../lacp
-	branch = master
+	branch = stable/lithium
 [submodule "nic"]
 	path = nic
 	url = ../../nic
