Temporarily revert openflowplugin back to master branch
Change-Id: I185514a969b5ead86ee6891a90569e83038325e1
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -41,7 +41,7 @@
 [submodule "openflowplugin"]
 	path = openflowplugin
 	url = ../../openflowplugin
-	branch = stable/lithium
+	branch = master
 [submodule "ovsdb"]
 	path = ovsdb
 	url = ../../ovsdb
