Track alto stable/lithium branch
Change-Id: I89c30f5aec33626bde23d6a1bc7a68606dbbb93b
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -81,7 +81,7 @@
 [submodule "alto"]
 	path = alto
 	url = ../../alto
-	branch = master
+	branch = stable/lithium
 [submodule "capwap"]
 	path = capwap
 	url = ../../capwap
