Track stable/lithium branch for iotdm
Change-Id: I7ced3de33b65c918eb4f2b9e99ad47547b582b9d
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -101,7 +101,7 @@
 [submodule "iotdm"]
 	path = iotdm
 	url = ../../iotdm
-	branch = master
+	branch = stable/lithium
 [submodule "lacp"]
 	path = lacp
 	url = ../../lacp
